kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zero-downtime-api
  namespace: zero-downtime
spec:
  type: ClusterIP

  selector:
    app: zero-downtime-api

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
